<resources>
    <string name="long_label_1">long_label_1</string>
    <string name="short_label_1">short_label_1</string>

    <string name="long_label_2">long_label_2</string>
    <string name="short_label_2">short_label_2</string>

    <string name="long_label_3">long_label_3</string>
    <string name="short_label_3">short_label_3</string>

    <string name="long_label_4">long_label_4</string>
    <string name="short_label_4">short_label_4</string>
</resources>